syntax = "proto3";

option go_package = "./;proto";
option java_package = "com.github.go2o.rpc";

// 保存商户请求
message SSaveMerchantParams{
  // 名称
  string mchName = 1;
  // 登录密码
  string password = 2;
  // 标志
  int32 flag = 3;
  // 商户等级
  int32 level = 4;
  // 所在省
  int32 province = 5;
  // 所在市
  int32 city = 6;
  // 所在区
  int32 district = 7;
  // 公司地址
  string address = 8;
  // 标志
  string logo = 9;
  // 公司电话
  string telephone = 10;
}

// 保存商户认证信息请求
message SaveAuthenticateRequest{
  // 商户编号
  int64 mchId = 1;
  // 商户名称号
  string mchName = 2;
      // 省
  int32  province = 3;
    // 市
  int32 city = 4;
    // 区
  int32  district = 5;
  // 公司名称
  string orgName = 6;
  // 营业执照编号
  string orgNo = 7;
  // 营业执照照片
  string orgPic = 8;
  // 公司地址
  string orgAddress = 9;
  // 办公地
  int32 workCity = 21;
  // 资质图片
  string qualificationPic = 10;
  // 法人身份证号
  string personId = 11;
  // 法人姓名
  string personName = 12;
  // 法人身份证照片
  string personFrontPic = 13;
  // 身份证反面
  string personBackPic = 14;
  // 银行账户证明
  string bankAccountPic = 22;
  // 授权书
  string authorityPic = 15;
  // 开户银行
  string bankName = 16;
  // 开户户名
  string bankAccount = 17;
  // 开户账号
  string bankNo = 18;
  // 扩展数据
  string extraData = 19;
  // 联系人手机
  string personPhone = 20;
  // 联系人姓名
  string contactName = 23;
  // 联系人电话
  string contactPhone = 24;
}


// 商户注册请求
message CreateMerchantRequest {
  // 登录用户
  string username = 1;
  // 会员编号
  int64 memberId = 2;
  // 是否自营
  int32 isSelf = 3;
  // 商户信息
  SSaveMerchantParams mch = 4;
}

// 商户注册响应
message MerchantCreateResponse {
  // 错误代码
  int32 errCode = 1;
  // 错误信息
  string errMsg = 2;
  // 商户编号
  int64 merchantId = 3;
}

// 保存商户请求
message SaveMerchantRequest {
 // 商户编号
 int64 mchId = 1;
 // 商户信息
 SSaveMerchantParams mch = 4;
}


// 商户
message QMerchant{
  // 编号
  int64 mchId = 1;
  // 名称
  string mchName = 2; 
  // 会员编号
  int64 memberId = 3;
  // 登录用户
  string username = 4;
  // 邮箱地址
  string mailAddr = 5;
  // 是否自营
  int32 isSelf = 6;
  // 标志
  int32 flag = 7;
  // 商户等级
  int32 level = 8;
  // 所在省
  int32 province = 9;
  // 所在市
  int32 city = 10;
  // 所在区
  int32 district = 11;
  // 公司地址
  string address = 12;
  // 标志
  string logo = 13;
  // 公司电话
  string telephone = 14;
  // 状态: 0:未审核 1:已开通  2:停用  3: 关闭
  int32 status = 15;
  // 过期时间
  int64 expiresTime = 16;
  // 最后登录时间
  int64 lastLoginTime = 17;
  // 创建时间
  int64 createTime = 18;
  // 商户认证信息
  QAuthenticate authenticate = 19;
}

// 商户认证信息
message QAuthenticate{
 // 公司名称
 string orgName = 1;
 // 营业执照编号
 string orgNo = 2;
 // 营业执照照片
 string orgPic = 3;
 // 办公地
 int32 workCity = 6;
 // 资质图片
 string qualificationPic = 7;
 // 法人身份证号
 string personId = 8;
 // 法人姓名
 string personName = 9;
 // 法人身份证照片
 string personFrontPic = 10;
 // 身份证反面
 string personBackPic = 21;
 // 银行账户证明
 string bankAccountPic = 22;
 // 联系人手机
 string personPhone = 11;
 // 授权书
 string authorityPic = 12;
 // 开户银行
 string bankName = 13;
 // 开户户名
 string bankAccount = 14;
 // 开户账号
 string bankNo = 15;
 // 审核时间
 int32 reviewTime = 16;
 // 审核状态
 int32 reviewStatus = 17;
 // 审核备注
 string reviewRemark = 18;
 // 扩展数据
 map<string,string> extraData = 19;
 // 更新时间
 int64 updateTime = 20;
}

/** 更换会员绑定请求 */
message ChangeMemberBindRequest{
  /** 商户编号 */
  int64 merchantId = 1;
  /** 会员用户名 */
  string username = 2;
}

message MchUserPwdRequest {
  string username = 1;
  string password = 2;
}
// 用户登录响应
message MchLoginResponse{
  // 错误码
  int32 errCode = 1;
  // 错误消息
  string errMsg = 2;
  // 会员编号
  int64 merchantId = 3;
  // 店铺编号
  int64 shopId = 4;
}

message SyncWSItemsResponse {
  map<string, sint32> value = 1;
}

message STradeConfListResponse {
  repeated STradeConf_ value = 1;
}

message TradeConfRequest {
  sint32 mchId = 1;
  sint32 tradeType = 2;
}
message TradeConfSaveRequest {
  sint32 mchId = 1;
  repeated STradeConf_ arr = 2;
}

// 商户交易设置
message STradeConf_ {
  // 商户编号  sint64 MchId = 1;
  // 交易类型  sint32 TradeType = 2;
  // 交易方案，根据方案来自动调整比例  sint64 PlanId = 3;
  // 交易标志  sint32 Flag = 4;
  // 交易手续费依据,1:按金额 2:按比例  sint32 AmountBasis = 5;
  // 交易费，按单笔收取  sint32 transactionFee = 6;
  // 交易手续费比例  sint32 TradeRate = 7;
}


// 商户审核请求
message MerchantReviewRequest {
  // 商户编号
  int64 mchId = 1;
  // 是否审核通过
  bool pass = 2;
  // 备注
  string remark = 3;
}


// 商户账户
message SMerchantAccount {
  // 余额
  int64 balance = 1;
  // 冻结金额
  int64 freezeAmount = 2;
  // 待入账金额
  int64 awaitAmount = 3;
  // 平台赠送金额
  int64 presentAmount = 4;
  // 累计销售总额
  int64 salesAmount = 5;
  // 累计退款金额
  int64 refundAmount = 6;
  // 已提取金额
  int64 withdrawalAmount = 7;
  // 可开票金额
  int64 invoiceableAmount = 8;
  // 线下销售金额
  int64 offlineSales = 9;
  // 更新时间
  int64 updateTime = 10;
}

/** 商户锁定状态请求 */
message MerchantLockStatusRequest {
  // 商户编号
  int64 merchantId = 1;
  // 是否锁定, false为解锁
  bool lock = 2;
}

// 销售设置
message SMerchantSaleConf {
  // 合作商编号
  int64 merchantId = 1;
  // 是否启用分销模式
  bool fxSalesEnabled = 2;
  // 返现比例,0则不返现
  double cashBackPercent = 3;
  // 一级比例
  double cashBackTg1Percent = 4;
  // 二级比例
  double cashBackTg2Percent = 5;
  // 会员比例
  double cashBackMemberPercent = 6;
  // 自动设置订单
  bool autoSetupOrder = 7;
  // 订单超时分钟数
  int32 orderTimeOutMinute = 8;
  // 订单自动确认时间
  int32 orderConfirmAfterMinute = 9;
  // 订单超时自动收货
  int32 orderTimeOutReceiveHour = 10;
}

message SaveMerchantSaleConfRequest {
  int64 merchantId = 1;
  SMerchantSaleConf value = 2;
}

/** 修改商户密码 */
message ModifyMerchantPasswordRequest {
  /** 商户编号 */
  int64 merchantId = 1;
  /** 旧密码 */
  string oldPassword = 2;
  /** 新密码 */
  string newPassword = 3;
}

// 商户接口信息
message SMerchantApiInfo {
  // 商户接口编号
  string apiId = 1;
  // 密钥
  string apiSecret = 2;
  // IP白名单
  repeated string whiteList = 3;
  // 是否启用
  bool enabled = 4;
}

message MerchantApiPermRequest {
  int64 merchantId = 1;
  // 是否启用
  bool enabled = 4;
}

message WithdrawToMemberAccountRequest {
  int64 merchantId = 1;
  int64 amount = 2;
}



message MerchantBuyerGroupId {
  int64 merchantId = 1;
  int64 groupId = 2;
}

message SaveMerchantBuyerGroupRequest {
  int64 merchantId = 1;
  SMerchantBuyerGroup value = 2;
}

message MerchantBuyerGroupListResponse {
  repeated SMerchantBuyerGroup value = 1;
}

// 商户客户分组
message SMerchantBuyerGroup {
  //编号
  int64 id = 1;
  //客户分组编号
  int64 groupId = 2;
  //分组别名
  string name = 3;
  // 是否启用零售
  bool enableRetail = 4;
  // 是否启用批发
  bool enableWholesale = 5;
  // 批发返点周期(天)
  int32 rebatePeriod = 6;
}

message SaveWholesaleRebateRateRequest {
  int64 merchantId = 1;
  int64 groupId = 2;
  repeated SWholesaleRebateRate value = 3;
}

message WholesaleRebateRateListResponse {
  repeated SWholesaleRebateRate value = 1;
}

// 批发客户分组返点比例设置
message SWholesaleRebateRate {
  // 编号
  int64 id = 1;
  // 批发商编号
  int64 wsId = 2;
  // 客户分组编号
  int64 buyerGroupId = 3;
  // 下限金额
  int32 requireAmount = 4;
  // 返点率
  double rebateRate = 5;
}
