syntax = "proto3";

import "global.proto";

option go_package = "./;proto";
option java_package = "com.github.go2o.rpc";


message CreateWalletRequest {
    // 用户编号
    int64 userId =  1;
    // 用户名
    string username = 2;
    // 钱包类型
    int32 walletType= 3;
    // 钱包名称
    string walletName = 4;
    // 钱包标志
    int32 walletFlag = 5;
}

// 获取钱包请求
message GetWalletRequest {
    // 用户编号
    sint64 userId =  1;
    // 钱包类型
    sint32 walletType= 2;
}

message WalletLogIDRequest {
    // 钱包编号
    sint64 walletId = 1;
    // 钱包流水编号
    sint64 id = 2;
}
message AdjustRequest {
    sint64 walletId = 1;
    int64 amount =  2;
    string title = 3;
    string outerNo = 4;
    string remark = 5;
    sint32 operatorUid = 6;
    string operatorName = 7;
}

message DiscountRequest {
    sint64 walletId = 1;
    sint64 amount =  2;
    string title = 3;
    string outerNo = 4;
    bool must = 5;
}

/** 冻结请求 */
message FreezeRequest {
    /** 钱包编号 */
    int64 walletId = 1;
    /** 冻结金额 */
    int64 amount =  2;
    /** 标题 */
    string title = 3;
    /** 外部关联订单号 */
    string outerNo = 4;
    /** 备注 */
    string remark = 5;
    /** 操作人员编号 */
    sint32 operatorUid = 6;
    /** 操作人员名称 */
    string operatorName = 7;
}
/** 冻结响应 */
message FreezeResponse{
    /** 错误码 */
    int32 errCode = 1;
    /** 错误消息 */
    string errMsg = 2;
    /** 日志ID */
    int64 logId = 3;
}
/** 解冻请求 */
message UnfreezeRequest {
    /** 钱包编号 */
    sint64 walletId = 1;
    /** 冻结金额 */
    int64 amount =  2;
    /** 标题 */
    string title = 3;
    /** 外部关联订单号 */
    string outerNo = 4;
    /** 备注 */
    string remark = 5;
    /** 操作人员编号 */
    sint32 operatorUid = 6;
    /** 操作人员名称 */
    string operatorName = 7;
    // 是否退回余额
    bool isRefundBalance = 8;
}

message ChargeRequest {
    /** 钱包ID */
    int64 walletId = 1;
    int64 amount =  2;
    int32 by = 3;
    string title = 4;
    string outerNo = 5;
    string remark = 6;
    int32 operatorUid = 7;
    string operatorName = 8;
}

message TransferRequest {
    /** 钱包ID */
    sint64 walletId = 1;
    /** 目标钱包ID */
    sint64 toWalletId = 2;
    /** 转账金额 */
    int64 amount = 3;
    /** 手续费 */
    sint64 transactionFee = 4;
    /** 备注 */
    string remark = 5;
}
/** 钱包服务 */
service WalletService {
    /** 创建钱包，并返回钱包编号 */
    rpc CreateWallet (CreateWalletRequest) returns (Result) {
    }
    /** 获取钱包编号，如果钱包不存在，则返回0 */
    rpc GetWalletId (GetWalletRequest) returns (Int64) {
    }

    /** 获取钱包账户,传入walletId */
    rpc GetWallet (Int64) returns (SWallet) {
    }

    /** 获取钱包账户,传入walletCode */
    rpc GetWalletByCode(String)returns(SWallet) {}

    /** 获取钱包日志 */
    rpc GetWalletLog (WalletLogIDRequest) returns (SWalletLog) {
    }

    /** 调整余额，可能存在扣为负数的情况，需传入操作人员编号或操作人员名称 */
    rpc Adjust (AdjustRequest) returns (Result) {
    }

    /** 支付抵扣,must是否必须大于0 */
    rpc Discount (DiscountRequest) returns (Result) {
    }

    /** 冻结余额 */
    rpc Freeze (FreezeRequest) returns (FreezeResponse) {
    }

    /** 解冻金额 */
    rpc Unfreeze (UnfreezeRequest) returns (Result) {
    }

    /** 充值,kind: 业务类型 */
    rpc Charge (ChargeRequest) returns (Result) {
    }

    /** 转账,title如:转账给xxx， toTitle: 转账收款xxx */
    rpc Transfer (TransferRequest) returns (Result) {
    }

    /** 申请提现,kind：提现方式,返回info_id,交易号 及错误,value为提现金额,transactionFee为手续费 */
    rpc RequestWithdrawal (RequestWithdrawalRequest) returns (Result) {
    }

    /** 确认提现 */
    rpc ReviewTakeOut (ReviewWithdrawRequest) returns (Result) {
    }

    /** 完成提现 */
    rpc FinishWithdrawal (FinishWithdrawRequest) returns (Result) {
    }

    /** 获取分页钱包日志 */
    rpc PagingWalletLog (PagingWalletLogRequest) returns (SPagingResult) {
    }
}

message PagingWalletLogRequest {
    sint64 walletId = 1;
    SPagingParams params = 2;
}
message FinishWithdrawRequest {
    sint64 walletId = 1;
    sint64 transactionId = 2;
    string outerNo = 3;
}

// 提现请求
message RequestWithdrawalRequest {
    // 钱包编号
    int64 walletId = 1;
    // 交易描述
    string transactionTitle = 2;
    // 金额
    int64 amount = 3;
    // 手续费
    int32 transactionFee = 4;
    // 提现方式
    sint32 withdrawKind = 5;
    // 银行名称，withdrawKind为32时传入
    string bankName = 6;
    // 账户名称
    string accountName = 8;
    // 账号
    string accountNo = 7;
}

message ReviewWithdrawRequest {
    sint64 walletId = 1;
    sint64 transactionId = 2;
    bool reviewPass = 3;
    string remark = 4;
    sint32 operatorUid = 5;
    string operatorName = 6;
}
/** 钱包类型 */
enum EWalletType {
    _6 = 0;
    /** 个人钱包 */
    TPerson = 1;
    /** 商家钱包 */
    TMerchant = 2;
}

/** 钱包标志 */
enum EWalletFlag {
    _7 = 0;
    /** 抵扣 */
    FlagDiscount = 1;
    /** 充值 */
    FlagCharge = 2;
}

/** 充值方式 */
enum EChargeKind {
    _8 = 0;
    /** 用户充值 */
    CUserCharge = 1;
    /** 系统自动充值 */
    CSystemCharge = 2;
    /** 客服充值 */
    CServiceAgentCharge = 3;
    /** 退款充值 */
    CRefundCharge = 4;
}

/** 钱包日志种类 */
enum EWalletLogKind {
    _9 = 0;
    /** 赠送/充值 */
    KCharge = 1;
    /** 钱包收入 */
    KCarry = 2;
    /** 失效 */
    KExpired = 3;
    /** 客服调整 */
    KAdjust = 4;
    /** 消费 */
    KConsume = 5;
    /** 扣除 */
    KDiscount = 6;
    /** 转入 */
    KTransferIn = 7;
    /** 转出 */
    KTransferOut = 8;
    /** 冻结 */
    KFreeze = 9;
    /** 解冻 */
    KUnfreeze = 10;

    /** 转账退款 */
    KTransferRefund = 11;
    /** 提现退还到银行卡 */
    KTakeOutRefund = 12;
    /** 支付单退款 */
    KPaymentOrderRefund = 13;

    /** 提现到银行卡(人工提现) */
    KWithdrawalToBankCard = 14;
    /** 提现到第三方 */
    KWithdrawalToThirdPart = 15;
}

/** 钱包 */
message SWallet {
    /** 钱包编号 */
    sint64 id = 1;
    /** 哈希值 */
    string hashCode = 2;
    /** 节点编号 */
    sint32 nodeId = 3;
    /** 用户编号 */
    sint64 userId =  4;
    /** 用户名 */
    string username = 5;
    // 钱包名称
    string walletName = 6;
    /** 钱包类型 */
    sint32 walletType = 7;
    /** 钱包标志 */
    sint32 walletFlag = 8;
    /** 余额 */
    sint32 balance = 9;
    /** 赠送余额 */
    sint32 presentBalance = 10;
    /** 调整金额 */
    sint32 adjustAmount = 11;
    /** 冻结余额 */
    sint32 freezeAmount = 12;
    /** 结余金额 */
    sint32 latestAmount = 13;
    /** 失效账户余额 */
    sint32 expiredAmount = 14;
    /** 总充值金额 */
    sint32 totalCharge = 15;
    /** 累计赠送金额 */
    sint32 totalPresent = 16;
    /** 总支付额 */
    sint32 totalPay = 17;
    /** 状态 */
    sint32 state = 18;
    /** 创建时间 */
    sint64 createTime = 19;
    /** 更新时间 */
    sint64 updateTime = 20;
}

/** 钱包日志 */
message SWalletLog {
    /** 编号 */
    sint64 id = 1;
    /** 钱包编号 */
    sint64 walletId = 2;
    /** 钱包用户的用户名 */
    string walletUser = 3;
    /** 业务类型 */
    sint32 kind = 4;
    /** 标题 */
    string title = 5;
    /** 外部通道 */
    string outerChan = 6;
    /** 外部订单号 */
    string outerNo = 7;
    /** 变动金额 */
    int64 value =  8;
    /** 余额 */
    int64 balance = 9;
    /** 交易手续费 */
    int64 transactionFee = 10;
    /** 操作人员用户编号 */
    sint32 operatorUid = 11;
    /** 操作人员名称 */
    string operatorName = 12;
    /** 备注 */
    string remark = 13;
    /** 审核状态 */
    sint32 reviewStatus = 14;
    /** 审核备注 */
    string reviewRemark = 15;
    /** 审核时间 */
    sint64 reviewTime = 16;
    /** 创建时间 */
    sint64 createTime = 17;
    /** 更新时间 */
    sint64 updateTime = 18;
}
